<resources>
    <string name="app_name">Mario Kart World Online Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings_items_per_row">Displayed items per row</string>
    <string name="action_settings_change_engine_class_display">Select engine class display</string>
    <string name="action_settings_show_all_entries">Show all statistics entries</string>

    <string name="menu_home">Home</string>
    <string name="menu_start_session">New session</string>

    <string name="menu_statistics">Statistics</string>
    <string name="menu_statistics_race_worldwide_title">Statistics - Race (worldwide)</string>
    <string name="menu_statistics_race_versus_title">Statistics - Race (versus)</string>
    <string name="menu_statistics_knockout_worldwide_title">Statistics - Knockout (worldwide)</string>
    <string name="menu_statistics_knockout_versus_title">Statistics - Knockout (versus)</string>

    <string name="no_race_results_yet">No race results yet.</string>
    <string name="home_intro_title">Welcome to the Mario Kart World Online Tracker</string>
    <string name="home_intro_message">
        Track all your online race or knockout results in one place.\n
        \n
        Start a session via the menu on the left. While in a session you can continuously save your results.\n
        \n
        If you want to view your results and highlights, go to statistics.
    </string>

    <!-- Export -->
    <string name="action_settings_export_to_csv">Export result history to CSV</string>
    <string name="no_data_to_export">No data to export</string>
    <string name="export_successful">Export successful</string>
    <string name="export_failed">Export failed</string>
    <string name="export_data_fetch_failed">Data fetch failed</string>
    <string name="export_cancelled">Export cancelled</string>

    <!-- Statistics race -->
    <string name="menu_statistics_race_worldwide">Race (worldwide)</string>
    <string name="menu_statistics_race_versus">Race (versus)</string>

    <string name="statistics_race_title">Race\n(worldwide)</string>
    <string name="statistics_race_vs_title">Race\n(versus)</string>
    <string name="statistics_race_total_sessions">Total sessions:</string>
    <string name="statistics_race_average_races_per_session">Median races per session:</string>
    <string name="statistics_race_total_races">Total races:</string>
    <string name="statistics_race_average_position">Average position:</string>
    <string name="statistics_race_summary">
        Multiple numbers are shown in format 1 / 1 / 1 which means:\nTotal / three-lap only / route only</string>
    <string name="statistics_race_most_played_three_lap_track">Most played three-lap track:</string>
    <string name="statistics_race_most_played_route">Most played route:</string>
    <string name="result_count_separator_text">\u00A0/\u00A0</string>

    <!-- Statistics knockout -->
    <string name="menu_statistics_knockout_worldwide">Knockout (worldwide)</string>
    <string name="menu_statistics_knockout_versus">Knockout (versus)</string>

    <string name="statistics_knockout_title">Knockout\n(worldwide)</string>
    <string name="statistics_knockout_versus_title">Knockout\n(versus)</string>
    <string name="statistics_knockout_total_sessions">Total sessions:</string>
    <string name="statistics_knockout_total_races">Total rallies:</string>
    <string name="statistics_knockout_average_races_per_session">Median rallies per session:</string>
    <string name="statistics_knockout_average_position">Average position:</string>
    <string name="statistics_knockout_most_played_rally">Most played rally:</string>

    <string name="statistics_tab_general">General</string>
    <string name="statistics_tab_tracks">Tracks</string>
    <string name="statistics_tab_routes">Routes</string>
    <string name="statistics_tab_rallies">Rallies</string>
    <string name="statistics_tab_history">Result history</string>
    <string name="statistics_list_header_track">Track</string>
    <string name="statistics_list_header_position">Average position</string>
    <string name="statistics_list_header_amount">No. of races</string>
    <string name="statistics_list_header_route">Route</string>
    <string name="statistics_list_header_rally">Rally</string>
    <string name="settings_option_yes">Yes</string>
    <string name="settings_option_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="statistics_history_header_race_no">Race No.</string>
    <string name="statistics_history_header_track_route">Track/route</string>
    <string name="statistics_history_header_position">Position</string>
    <string name="statistics_history_header_engine_class">Engine class</string>
    <string name="statistics_history_header_rally_no">Rally no.</string>
    <string name="statistics_history_header_rally">Rally</string>
    <string name="statistics_history_header_date">Date</string>
    <string name="history_header_session">Session</string>
    <string name="history_header_separator">-</string>
    <string name="history_header_tracks">(Tracks:</string>
    <string name="history_header_routes">Routes:</string>
    <string name="history_header_rallies">(Rallies:</string>
    <string name="history_header_closing_segment">)</string>
    <string name="history_header_separator2">,</string>
    <string name="settings_engine_class_options_title">Engine class options for races</string>
    <string name="settings_hide_100cc">Hide 100cc option</string>
    <string name="settings_auto_select_150cc">Auto-select 150cc</string>
    <string name="settings_saved">Settings saved</string>
    <string name="checkbox_mirror_mode">Mirror mode</string>
</resources>