<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_start_session"
            android:icon="@drawable/session"
            android:title="@string/menu_start_session" />

        <!-- Oberpunkt "Statistics" - ohne eigene ID oder Aktion -->
        <item
            android:icon="@drawable/history"
            android:title="@string/menu_statistics">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_statistics_race_worldwide"
                        android:icon="@drawable/race_icon"
                        android:title="@string/menu_statistics_race_worldwide" />
                    <item
                        android:id="@+id/nav_statistics_race_versus"
                        android:icon="@drawable/race_icon"
                        android:title="@string/menu_statistics_race_versus" />
                    <item
                        android:id="@+id/nav_statistics_knockout_worldwide"
                        android:icon="@drawable/knockout_icon"
                        android:title="@string/menu_statistics_knockout_worldwide" />
                    <item
                        android:id="@+id/nav_statistics_knockout_versus"
                        android:icon="@drawable/knockout_icon"
                        android:title="@string/menu_statistics_knockout_versus" />
                </group>
            </menu>
        </item>
    </group>
</menu>