<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="6"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/header_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/statistics_history_header_date"/>

    <TextView
        android:id="@+id/header_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/statistics_history_header_rally"/>

    <TextView
        android:id="@+id/header_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/statistics_history_header_engine_class"/>

    <TextView
        android:id="@+id/header_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/statistics_history_header_position"/>

</LinearLayout>