<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="top"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@color/sand_300"
    app:strokeColor="@android:color/black"
    app:strokeWidth="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <!-- Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginEnd="0dp"
                android:contentDescription="@null"
                android:src="@drawable/knockout_icon"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistics_knockout_title"
                android:textColor="@android:color/black"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textSize="32sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <!-- Knockout result statistics -->

        <!-- Number of knockout sessions -->
        <LinearLayout style="@style/Mkwot.Statistics.KeyValueContainer">
            <TextView
                style="@style/Mkwot.Statistics.Key"
                android:text="@string/statistics_knockout_total_sessions"/>

            <com.rain.mariokartworldonlinetracker.views.OutlinedTextView
                android:id="@+id/statistics_knockout_total_sessions"
                style="@style/Mkwot.Statistics.Value"
                android:text="119"/>
        </LinearLayout>

        <!-- Number of races -->
        <LinearLayout style="@style/Mkwot.Statistics.KeyValueContainer">
            <TextView
                style="@style/Mkwot.Statistics.Key"
                android:text="@string/statistics_knockout_total_races"/>

            <com.rain.mariokartworldonlinetracker.views.OutlinedTextView
                android:id="@+id/statistics_knockout_total_races_total"
                style="@style/Mkwot.Statistics.Value"
                android:text="250"/>
        </LinearLayout>

        <!-- Number of races per session (avg) -->
        <LinearLayout style="@style/Mkwot.Statistics.KeyValueContainer">
            <TextView
                style="@style/Mkwot.Statistics.Key"
                android:text="@string/statistics_knockout_average_races_per_session"/>

            <com.rain.mariokartworldonlinetracker.views.OutlinedTextView
                android:id="@+id/statistics_knockout_average_races_per_session_total"
                style="@style/Mkwot.Statistics.Value"
                android:text="5"/>
        </LinearLayout>

        <!-- Average race placement -->
        <LinearLayout style="@style/Mkwot.Statistics.KeyValueContainer">
            <TextView
                style="@style/Mkwot.Statistics.Key"
                android:text="@string/statistics_knockout_average_position"/>

            <com.rain.mariokartworldonlinetracker.views.OutlinedTextView
                android:id="@+id/statistics_knockout_average_position_total"
                style="@style/Mkwot.Statistics.Value"
                android:text="6"/>
        </LinearLayout>

        <!-- Most played rally -->
        <LinearLayout style="@style/Mkwot.Statistics.KeyValueContainer">
            <TextView
                style="@style/Mkwot.Statistics.Key"
                android:text="@string/statistics_knockout_most_played_rally"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal"
                android:weightSum="3">
                <ImageView
                    android:id="@+id/statistics_knockout_most_played_rally"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/button_gr1"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>