<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Fragment.Mkwot"
    tools:context=".ui.statistics.knockout.worldwide.StatisticsKnockoutVersusGeneralFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/sand_300"
        app:strokeColor="@android:color/black"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <!-- Title -->
            <include layout="@layout/layout_statistics_knockout_versus_title"/>

            <!-- Number of knockout sessions -->
            <LinearLayout style="@style/Mkwot.Statistics.KeyValueContainer">
                <TextView
                    style="@style/Mkwot.Statistics.Key"
                    android:text="@string/statistics_knockout_total_sessions"/>

                <com.rain.mariokartworldonlinetracker.views.OutlinedTextView
                    android:id="@+id/statistics_knockout_total_sessions"
                    style="@style/Mkwot.Statistics.Value"
                    android:text="119"/>
            </LinearLayout>

            <!-- Number of races -->
            <LinearLayout style="@style/Mkwot.Statistics.KeyValueContainer">
                <TextView
                    style="@style/Mkwot.Statistics.Key"
                    android:text="@string/statistics_knockout_total_races"/>

                <com.rain.mariokartworldonlinetracker.views.OutlinedTextView
                    android:id="@+id/statistics_knockout_total_races_total"
                    style="@style/Mkwot.Statistics.Value"
                    android:text="250"/>
            </LinearLayout>

            <!-- Number of races per session (avg) -->
            <LinearLayout style="@style/Mkwot.Statistics.KeyValueContainer">
                <TextView
                    style="@style/Mkwot.Statistics.Key"
                    android:text="@string/statistics_knockout_average_races_per_session"/>

                <com.rain.mariokartworldonlinetracker.views.OutlinedTextView
                    android:id="@+id/statistics_knockout_average_races_per_session_total"
                    style="@style/Mkwot.Statistics.Value"
                    android:text="5"/>
            </LinearLayout>

            <!-- Average race placement -->
            <LinearLayout style="@style/Mkwot.Statistics.KeyValueContainer">
                <TextView
                    style="@style/Mkwot.Statistics.Key"
                    android:text="@string/statistics_knockout_average_position"/>

                <com.rain.mariokartworldonlinetracker.views.OutlinedTextView
                    android:id="@+id/statistics_knockout_average_position_total"
                    style="@style/Mkwot.Statistics.Value"
                    android:text="6"/>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</ScrollView>